# vello_bench

./: .gitignore  Cargo.toml  README.md  build.sh  serve.sh  tauri.sh  wasm.sh
scripts/: build-wasm.sh  serve.sh
src/: data.rs  flatten.rs  glyph.rs  integration.rs  main.rs  strip.rs  tile.rs
src/fine/: blend.rs  fill.rs  gradient.rs  image.rs  mod.rs  pack.rs  rounded_blurred_rect.rs  strip.rs
ui/: app.js  index.html  style.css  worker.js
vello_bench_cli/: Cargo.toml
vello_bench_cli/src/: main.rs
vello_bench_core/: Cargo.toml
vello_bench_core/src/: data.rs  dispatch.rs  lib.rs  registry.rs  result.rs  runner.rs  simd.rs
vello_bench_core/src/benchmarks/: fine_fill.rs  fine_gradient.rs  fine_image.rs  fine_pack.rs  fine_strip.rs  flatten.rs  integration.rs  mod.rs  render_strips.rs  strip.rs  strokes.rs  tile.rs
vello_bench_core/src/benchmarks/fine/: blend.rs  fill.rs  gradient.rs  image.rs  mod.rs  pack.rs  rounded_blurred_rect.rs  strip.rs
vello_bench_macros/: Cargo.toml
vello_bench_macros/src/: lib.rs
vello_bench_tauri/: Cargo.toml  build.rs  tauri.conf.json
vello_bench_tauri/capabilities/: default.json
vello_bench_tauri/src/: commands.rs  main.rs
vello_bench_tauri/ui/: app.js  index.html  style.css  worker.js
vello_bench_wasm/: Cargo.toml
vello_bench_wasm/src/: lib.rs
