# Copyright 2025 the Vello Authors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "vello_bench_cli"
description = "CLI for vello benchmarking."
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
publish = false

[[bin]]
name = "vello_bench"
path = "src/main.rs"

[dependencies]
vello_bench_core = { path = "../vello_bench_core" }

[lints.rust]
unsafe_code = "deny"
