[package]
name = "vello_bench_core"
description = "Core library for vello benchmarking."
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
vello_common.workspace = true
vello_cpu.workspace = true
fearless_simd.workspace = true
serde.workspace = true
rand.workspace = true
smallvec.workspace = true
usvg.workspace = true

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true

[features]
default = []

[lints]
workspace = true
