[package]
name = "vello_bench_macros"
description = "Procedural macros for vello benchmarking."
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
