[package]
name = "vello_bench_tauri"
version = "0.1.0"
description = "Tauri application for vello benchmarking."
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
publish = false

[build-dependencies]
tauri-build.workspace = true

[dependencies]
vello_bench_core.workspace = true
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dirs.workspace = true

[features]
default = []

[lints]
workspace = true
