# Copyright 2025 the Vello Authors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "vello_bench_wasm"
description = "WASM library for vello benchmarking."
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vello_bench_core = { path = "../vello_bench_core" }
vello_common = { path = "../../vello/sparse_strips/vello_common" }
vello_cpu = { path = "../../vello/sparse_strips/vello_cpu" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Window", "Performance"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.14"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[features]
default = []
simd128 = []

[lints.rust]
unsafe_code = "deny"
