# Copyright 2025 the Vello Authors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "vello_bench_wasm"
description = "WASM library for vello benchmarking."
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vello_bench_core = { path = "../vello_bench_core" }
fearless_simd = "0.3"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
serde_json = "1"

[features]
default = []
simd128 = []

[lints.rust]
unsafe_code = "deny"
