[package]
name = "vello_bench_wasm"
description = "WASM library for vello benchmarking."
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vello_bench_core.workspace = true
fearless_simd.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
serde_json.workspace = true

[features]
default = []
simd128 = []

[lints]
workspace = true
